# ml-learn

./: .gitignore  01-intro.ipynb  02-Regression.ipynb  03-Classification.ipynb  04-Evaluation.ipynb  06-Trees.ipynb  8-Deep-Learning.ipynb  README.md  pyproject.toml
05-Deployment/: 05-Deployment.ipynb  Dockerfile  Pipfile  docker-entrypoint.sh  predict.py  pyproject.toml
07-Deployment/BentoML/: README.md  bentofile.yaml  service.py  train.ipynb
07-Deployment/BentoML/homework/: homework.ipynb  service.py
09-Serverless/: 09-Serverless.ipynb  Dockerfile  lambda_function.py
10-Kubernetes/: 10-Kubernetes.ipynb  q6_test_loop.py
