[tool.poetry]
name = "ml-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "*"
numpy = "*"
pandas = "*"
Flask = "*"
gunicorn = "*"
seaborn = "*"

[tool.poetry.dev-dependencies]
ipykernel = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
