[tool.poetry]
name = "ml-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "*"
numpy = "*"
pandas = "*"
Flask = "*"
gunicorn = "*"
seaborn = "*"
xgboost = "*"
bentoml = "^1.0.7"
pydantic = "^1.10.2"
locust = "^2.12.2"

[tool.poetry.group.dev.dependencies]
tqdm = "*"
ipykernel = "*"
requests = "*"
ipywidgets = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
