[tool.poetry]
name = "05-ml-deployment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.0.2"
numpy = "^1.23.3"
pandas = "^1.5.0"
Flask = "^2.2.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.16.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
